# rshtml-analyzer

./: .gitignore  Cargo.toml  TODO.txt
.github/workflows/: build.yml  release.yml
src/: app_state.rs  backend.rs  consts.rs  load_config.rs  main.rs
src/app_state/: highlight.rs  view.rs  workspace.rs
src/backend/: language_server.rs  process_highlights.rs  semantic_tokens_builder.rs  server_capabilities.rs  tree_extensions.rs
