[package]
name = "rshtml_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = { version = "0.20.0" }
tokio = { version = "1.45.1", features = ["full"] }
tree-sitter = "0.25.6"
tree-sitter-highlight = "0.25.6"
tree-sitter-rshtml = { path = "../tree-sitter-rshtml" }
tree-sitter-html = "0.23.2"
tree-sitter-rust = "0.24.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.23"