[package]
name = "rshtml-analyzer"
version = "0.1.1"
edition = "2024"

[dependencies]
tower-lsp = { version = "0.20.0" }
tokio = { version = "1.45.1", features = ["full"] }
tree-sitter = "0.25.6"
tree-sitter-highlight = "0.25.6"
#tree-sitter-rshtml = { path = "../tree-sitter-rshtml" }
tree-sitter-rshtml = { git = "https://github.com/rshtml/tree-sitter-rshtml.git", tag = "v0.1.0" }
tree-sitter-html = "0.23.2"
tree-sitter-rust = "0.24.0"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.19"
toml = "0.9.2"
clap = { version = "4.5.45", features = ["derive"] }
